# sql-code-graph

./: .gitignore  .pre-commit-config.yaml  .sqlcgignore  ARCHITECTURE_REVIEW.md  ARCHITECTURE_REVIEW_ARCHIVE.md  CHANGELOG.md  CLAUDE.md  README.md  e2e_firstuser_report.md  e2e_run_20260528_101413.output  main.py  profile.html  pyproject.toml  pyrightconfig.json  results_200.json  results_full.json  scratch_debug_hang.py  scratch_e2e_schema.py  scratch_ia_schema_compare.py  scratch_profile_10.py  scratch_profile_100.py  scratch_profile_combi.py  scratch_profile_index.py  scratch_profile_slow.py  table_graph.html
.claude/: progress.txt
.claude/agents/: api-documenter.md  architect-planner.md  architect-reviewer.md  code-reviewer.md  developer.md  plan-reviewer.md  sprint-planner.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmark.yml  e2e-tests.yml  release.yml  test.yml
docs/: AIRBNB_PARSE_REPORT.md  cli.md  getting-started.md  releasing-pypi.md
plan/: WORKFLOW.md  blueprint.md  bundle_claude_skill.md  diff-impact-producer-file.md  feature_34_unused_presentation_segregation.md  feature_35_external_downstream_injection.md  feature_F2_bundle_claude_skill.md  feature_kuzu_to_duckdb_migration.md  findings_v1.1.2_dwh_eval.md  fix_downstream_sink_location.md  fix_dynamic_table_parsing.md  fix_expand_qualify_perf.md  fix_firstuser_findings.md  fix_issue29_live_test_followups.md  fix_issue_29_single_writer_queue.md  fix_schema_case_mismatch.md  hygiene_config_path_and_survivors.md  investigation_e5_e4.md  issue-38-backfill-cte-bridge.md  living_codebase_resync.md  parse_diagnostics.md  parsing_errors_experiment.md  phase10_deployment.md  progress.txt  snowflake_en_test_suite.md  sprint_02.md  sprint_05_star_resolution.md  sprint_06_lineage_coverage.md  sprint_07_open_ecodes.md  sprint_07_perf_and_live_test.md  sprint_08_perf_upsert.md  sprint_09_lineage_coverage.md  sprint_10_anchor_tools.md  sprint_11_v1.0.2_bugfix.md  sprint_12_v1.1.0.md  sprint_13_v1.1.0_cluster_b.md  sprint_3.1_postmortem.md  sprint_column_lineage_fix.md  sprint_next.md  sprint_star_resolution.md  (+10 more)
plan/measurements/: pr2_catalog_load_eval.json  pr3_repo_native_plateau.json  pr4_transform_kinds.json  pr5_extraction_recall_taxonomy.json  schema_comparison_with_schema.json  schema_comparison_without_schema.json  sprint_08_changelogs_fullindex.json  sprint_08_fullcorpus_index.json
plan/metrics/: createkind_dwh_after.json  createkind_dwh_before.json  gain_1.29.0_05c6943.json  gain_1.30.0_2c8ac25.json  gain_1.30.1_26271fc.json  gain_1.31.0_a40c837.json  gain_1.32.0_c1bec3c.json  identifier_dwh_after_v1.35.0.json  identifier_dwh_before_v1.34.3.json  identifier_dwh_gain_context.md  lineage5_dwh_after_pr5.json  lineage5_dwh_before_master.json  pr4_star_promote_after.json  pr4_star_promote_before.json  pr_b_phantom_after.json  pr_b_phantom_before.json  sprint_08_changelogs_fullindex.json  sprint_08_fullcorpus_index.json  sprint_pool_300s_plan.json
plan/reports/: column_coverage_diagnostic.md  column_coverage_findings.md  dwh_graph_analysis.md  dwh_positional_insert_column_blindspot.md  e8_temp_chain_postmortem.md  feature_acceptance_dwh.md  graph_health_sprint_postmortem.md  island_lever_live_verification.md  issue38_pr2_live_acceptance.md  issue38_pr3_live_acceptance.md  lineage_identity_sprint_postmortem.md  mcp_selfheal_verification.md  pr_impact_followups_2026-06-14.md  v1_14_dialect_query_config_postmortem.md
plan/research/: coverage_parse_failure_diagnosis.md  e8_column_vs_island_remeasure.md  e8_dual_emission_feasibility.md  fresh_index_island_truth.md  observed_usage_overlay_query_history_tableau.md  remaining_islands_post_e8.md  sql_only_coverage_lever_post_pr2.md
plan/sprints/: backlog_confirmed_q2b.md  bugfix_audit_findings_151_153.md  bugfix_create_kind_mislabel.md  bugfix_githook_binary_resolution.md  bugfix_impact_analysis_validation.md  bugfix_impact_consumer_union.md  ci_tests_pool_flake_fix.md  (+33 more)
scripts/: collect_parse_errors.py  column_coverage_check.py  generate_cli_docs.sh
tests/: __init__.py  conftest.py
(+426 files in other folders)
