[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sql-code-graph"
version = "0.1.0"
description = "SQL code graph analyzer and lineage tracer"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Developer", email = "dev@example.com"}]

dependencies = [
    "sqlglot[rs]>=28.0,<32.0",
    "kuzu==0.11.3",
    "mcp>=1.27.0,<2.0",
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "watchdog>=3.0.0",
    "pathspec>=0.12.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
neo4j = ["neo4j>=5.15.0"]
dbt = ["dbt-core>=1.7"]
snowflake = ["acryl-datahub[sql-parsing]>=0.14.0,<0.15.0"]

[project.scripts]
sqlcg = "sqlcg.cli.main:main"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.350",
    "pre-commit>=3.6.0",
    "commitizen>=4.13.9",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
]

[tool.ruff.lint.isort]
known-first-party = ["sqlcg"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true

[tool.hatch.build.targets.wheel]
packages = ["src/sqlcg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
    "benchmark: benchmark tests",
]
